tests/NormalTests/paczka1/small_fuzzy/14837043.err
Error in line 7: 6OQz S331 4,8
Error in line 9: A493 S331 16,71
Error in line 10: 4YeQUsj S331 55,6
